vbnc/vbnc/tests/Errors/30368.vb
Public Class SomeClass

    Public Property Prop As String("Init")
			
End Class